--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           paython-version: '3.10'
       - name: Install Dependencies
-        run:
+        run: | # | for running multiple cmd 
           python -m pip install --upgrade pip
           pip install pyyaml 
       - name: Run Feed Generator 
