change the podcast generator to podcast-action-generator

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,21 +6,23 @@ jobs:
     steps:
       - name: Checkout Respo
         uses: actions/checkout@v3
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          paython-version: '3.10'
-      - name: Install Dependencies
-        run: | # | for running multiple cmd 
-          python -m pip install --upgrade pip
-          pip install pyyaml 
       - name: Run Feed Generator 
-        run: python feed.py
-      - name: Push Repo 
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@guthub.com
-          git add .
-          git commit -m "Modified Feed"
-          git push 
+        uses: grg-util/podcast-action-generator@main
+      # - name: Setup Python
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     paython-version: '3.10'
+      # - name: Install Dependencies
+      #   run: | # | for running multiple cmd 
+      #     python -m pip install --upgrade pip
+      #     pip install pyyaml 
+      # - name: Run Feed Generator 
+      #   run: python feed.py
+      # - name: Push Repo 
+      #   run: |
+      #     git config user.name github-actions
+      #     git config user.email github-actions@guthub.com
+      #     git add .
+      #     git commit -m "Modified Feed"
+      #     git push 
           
